--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
         <ul class="side-menu">
             <li>
-                <a href="/HomePage/Login/Login.html" class="login" target="_blank">
+                <a href="Login.html" class="login" target="_blank">
                     <i class='bx bx-log-out-circle'></i>
                     Login
                 </a>
@@ -69,7 +69,7 @@
                 <span class="count"></span>
             </a>
             <a href="#" class="profile">
-                <img src="images/profile.png" alt="Profile image">
+                <img src="profile.png" alt="Profile image">
             </a>
         </nav>
 
